--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,28 +9,35 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Install kubectl
-      run: |
-        KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt)
-        curl -LO "https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl"
-        chmod +x kubectl
-        sudo mv kubectl /usr/local/bin/
+      - name: Install kubectl
+        run: |
+          # Fetch Kubernetes version
+          KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt)
+          echo "KUBECTL_VERSION=$KUBECTL_VERSION"
 
-    - name: SSH into EC2 and deploy
-      run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} "
-        cd /home/ec2-user &&
-        docker build -t promotional-task-8 ./ &&
-        docker tag promotional-task-8:latest codesmiles/promotional-task-8:latest &&
-        docker push codesmiles/promotional-task-8:latest &&
-        kubectl apply -f kube/deployment.yaml &&
-        kubectl apply -f kube/service.yaml
-        "
+          # Construct URL and download kubectl
+          DOWNLOAD_URL="https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl"
+          echo "Downloading kubectl from $DOWNLOAD_URL"
+
+          curl -LO "$DOWNLOAD_URL"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+
+      - name: SSH into EC2 and deploy
+        run: |
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} "
+          cd /home/ec2-user &&
+          docker build -t promotional-task-8 ./ &&
+          docker tag promotional-task-8:latest codesmiles/promotional-task-8:latest &&
+          docker push codesmiles/promotional-task-8:latest &&
+          kubectl apply -f kube/deployment.yaml &&
+          kubectl apply -f kube/service.yaml
+          "
