--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .minikube
 .terraform
-terraform.tfstate
-terraform.tfstate.backup
 AWSCLIV2.pkg
+terraform.tfstate
 .terraform.lock.hcl
+terraform.tfstate.backup
+.terraform.tfstate.lock.info
