--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,30 +12,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      - name: SSH into EC2
+        uses: appleboy/ssh-action@master
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.EC2_PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Install kubectl
+      - name: Deploy to Minikube
         run: |
-          # Construct URL and download kubectl from the stable version (v1.30.3) in https://cdn.dl.k8s.io/release/stable.txt
-          DOWNLOAD_URL="https://dl.k8s.io/release/v1.30.3/bin/linux/amd64/kubectl"
-          echo "Downloading kubectl from $DOWNLOAD_URL"
+          minikube start
+          kubectl config use-context minikube
+          kubectl apply -f kube/kube-deployment.yaml 
+          kubectl apply -f kube/kube-service.yaml 
+        shell: bash
+        continue-on-error: true
 
-          # Follow the redirect and download the file
-          curl -LO -f -s -S "$DOWNLOAD_URL"
-          chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
-
-
-      - name: SSH into EC2 and deploy
+      - name: Verify Deployment
         run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} "
-          cd /home/ec2-user &&
-          docker build -t kodecamppromotionaltask8 ./ &&
-          docker tag kodecamppromotionaltask8 codesmiles/promotional-task-8:latest &&
-          docker push codesmiles/promotional-task-8:latest &&
-          kubectl apply -f kube/deployment.yaml &&
-          kubectl apply -f kube/service.yaml
-          "
+          kubectl get deployment
+          kubectl get svc
+        shell: bash
+        continue-on-error: true
+
+     
